--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,9 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+GameDefaultMap=/Game/Level_1.Level_1
 GlobalDefaultGameMode=/Game/BP_SnakeShramGameMode.BP_SnakeShramGameMode_C
+EditorStartupMap=/Game/Level_1.Level_1
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
