--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -16,3 +16,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/SnakeShram")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="SnakeShramGameModeBase")
 
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AntiAliasing=0
+r.DefaultFeature.MotionBlur=False
+
